Depth detection basically complete

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 # https://github.com/github/gitignore/blob/master/CSharp.gitignore
+desktop.ini
 
 # Build Folders (you can keep bin if you'd like, to store dlls and pdbs)
 [Bb]in/
