Ppt detect and action match completed

--- a/PPKinecT/PPKinecT.csproj
+++ b/PPKinecT/PPKinecT.csproj
@@ -22,7 +22,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>TRACE;DEBUG;#define WITH_KINECT</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;#define _WITH_KINECT</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
@@ -68,8 +68,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Action.cs" />
     <Compile Include="KCalibrator.cs" />
     <Compile Include="MainController.cs" />
+    <Compile Include="PPTController.cs" />
     <Compile Include="Vector.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
