--- a/PPKinecT/PPKinecT.csproj
+++ b/PPKinecT/PPKinecT.csproj
@@ -22,7 +22,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>TRACE;DEBUG;#define _WITH_KINECT</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;#define WITH_KINECT</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
